# etl

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: e2e-tests.yml  lib-tests.yml
ci/: wait-for-stack.sh
connectors/csv-source@0.1.0/: component.cwasm
crates/audit/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: jobs.rs  jwks.rs  jwt.rs  keystore.rs  lib.rs  refresh.rs  sealed.rs
crates/catalog/: Cargo.toml
crates/catalog/migrations/: 0001_initial.sql  0002_stream_state.sql  0003_workspaces_streams_schemas.sql  0004_cdc_slots.sql  0005_rls_prep.sql  0006_rls_policies.sql  0007_secrets.sql  0008_tenants_status.sql  0009_principals.sql  0010_secrets_vault.sql  0011_refresh_tokens.sql  0012_revoked_tokens.sql  0013_audit_log.sql  0014_audit_verified_chain.sql  0015_cdc_snapshots.sql  0016_stream_state_cursor_kinds.sql  0017_metering_events.sql
crates/catalog/src/: cdc.rs  cdc_snapshot.rs  connection.rs  db.rs  lib.rs  pipeline.rs  principal.rs  refresh.rs  revoke.rs  run.rs  schema.rs  secret.rs  stream.rs  stream_state.rs  tenant.rs  workspace.rs
crates/catalog/tests/: crud.rs
crates/cli/: Cargo.toml
crates/cli/src/: audit_cmd.rs  auditlog.rs  auth.rs  auth_client.rs  connector_build.rs  connector_cmd.rs  dsl.rs  main.rs  secret.rs  status.rs  tenant.rs  terminate.rs
crates/common-types/: Cargo.toml
crates/common-types/src/: auth.rs  cdc.rs  connection_config.rs  cursor.rs  dsl.rs  evolution.rs  ids.rs  lib.rs  pipeline_spec.rs  schema_fingerprint.rs  secrets.rs  transform.rs
crates/connector-sdk/: Cargo.toml  README.md
crates/connector-sdk/src/: lib.rs  templates.rs  test_harness.rs
crates/connector-sdk/src/templates/: mod.rs  typescript.rs
crates/connector-sdk/wit/: db.wit  source-connector.wit
crates/connector-sdk/wit-scalar/: scalar-udf.wit
crates/control-api/: Cargo.toml
crates/control-api/src/: lib.rs  main.rs
crates/loader-sdk/: Cargo.toml
crates/loader-sdk/src/: lib.rs
crates/metering/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker/src/: arrow_smoke.rs  cdc_monitor.rs  lib.rs  main.rs  metrics.rs  observability.rs  temporal.rs  tenant_watcher.rs
crates/worker/src/activities/: mod.rs  run_lifecycle.rs
crates/worker/src/activities/cdc/: inputs.rs  mod.rs
crates/worker/src/activities/mysql_cdc/: inputs.rs  mod.rs
crates/worker/src/activities/sync/: inputs.rs  mod.rs
crates/worker/src/connectors/: dispatch.rs  mod.rs
crates/worker/src/connectors/mysql/cdc/: decode.rs  mod.rs  position.rs  schema.rs  snapshot.rs  stream.rs
crates/worker/src/connectors/postgres/: discover.rs  mod.rs  read.rs
crates/worker/src/connectors/postgres/cdc/: decode.rs  mod.rs  slot.rs  snapshot.rs  stream.rs  types.rs
crates/worker/src/loaders/: cdc_parquet.rs  mod.rs  parquet_local.rs  postgres.rs
crates/worker/src/schema_evolution/: diff.rs  fingerprint.rs  mod.rs  policy.rs  recorder.rs
crates/worker/src/secrets/: auditing.rs  env.rs  file.rs  mod.rs  vault.rs
crates/worker/src/transform/: mod.rs  predicate.rs
crates/worker/src/transform/operators/: add_column.rs  filter.rs  mask.rs  mod.rs  select.rs  validate.rs  wasm_scalar.rs
crates/worker/src/wasm_runtime/: bindings.rs  connector.rs  db_host.rs  db_pg_subscribe.rs  db_subscribe.rs  engine.rs  epoch.rs  host.rs  limits.rs  mod.rs  runtime.rs  scalar_bindings.rs  scalar_runtime.rs  tests.rs
crates/worker/src/wasm_runtime/tests/: forbidden_import.wat  infinite_loop.wat  memory_hog.wat
crates/worker/src/workflows/: cdc_pipeline.rs  mod.rs  mysql_cdc_pipeline.rs  pipeline_run.rs  wasm_cdc_pipeline.rs
db/postgres-init/: 00-app-role.sql  01-source-demo.sql
docs/: connector-sdk-guide.md
docs/rfc/: RFC-0001-platform-vision.md  RFC-0002-core-architecture.md  RFC-0003-data-interchange.md  RFC-0004-temporal-topology.md  RFC-0005-wasm-runtime.md  RFC-0006-connector-protocol.md  RFC-0007-incremental-sync.md  RFC-0008-cdc-architecture.md  RFC-0009-destination-loaders.md  RFC-0010-catalog-schema-evolution.md  RFC-0011-secrets-management.md  RFC-0012-transformation-layer.md  RFC-0013-pipeline-dsl.md  RFC-0014-state-storage.md  RFC-0015-observability-lineage-audit.md  RFC-0016-multi-tenancy.md  RFC-0017-quotas-billing.md  RFC-0018-deployment-topology.md  RFC-0019-security-model.md  RFC-0020-sdk-extensibility.md  RFC-0021-query-engine.md  RFC-0022-lakehouse-formats.md  RFC-0023-streaming-execution.md  RFC-INDEX.md
examples/csv-source/: Cargo.toml  README.md
examples/csv-source/src/: lib.rs
examples/dsl/: customers-sync-secret.yaml  customers-sync-stripe.yaml  customers-sync-vault.yaml  customers-sync.yaml
examples/hello-world-source/: Cargo.toml  README.md
examples/mysql-cdc-rs/: Cargo.toml  (+1 more)
examples/postgres-cdc-rs/: Cargo.toml  README.md
examples/postgres-cdc-rs/src/: arrow_io.rs  discover.rs  lib.rs  snapshot.rs  streaming.rs
examples/stripe-source/: Cargo.toml  README.md
examples/stripe-source/src/: lib.rs  parse.rs  request.rs
examples/stripe-source/wit/: source-connector.wit
scripts/: dogfood-real-db.sh  seed-source-demo-big.sh  seed-source-demo.sh
tests/integration/: Cargo.toml
tests/integration/tests/: audit_chain.rs  audit_corruption.rs  audit_retention.rs  audit_secret_read.rs  audit_tenant_override.rs  auth_jwt.rs  cdc_insert_update_delete.rs  cdc_snapshot_streaming_handoff.rs  connector_lifecycle.rs  dsl_apply.rs  durability.rs  durability_midbatch.rs  health_endpoints.rs  incremental_sync.rs  metering_events.rs  mysql_cdc_e2e.rs  mysql_cdc_wasm_e2e.rs  oidc_jwks.rs  pg_cdc_advance_slot.rs  pg_loader_real_e2e.rs  postgres_cdc_wasm_e2e.rs  postgres_loader.rs  postgres_loader_cdc.rs  postgres_loader_multi_table.rs  postgres_loader_schema_evolution.rs  rbac_matrix.rs  refresh_rotate.rs  revocation.rs  rls_cross_tenant.rs  schema_evolution.rs  sealed_keys.rs  secrets_e2e.rs  stripe_e2e.rs  stripe_ts_e2e.rs  tenant_api_isolation.rs  tenant_lifecycle.rs  tenant_suspend.rs  transforms_dead_letter.rs  transforms_filter_mask.rs  typescript_connector_lifecycle.rs  (+2 more)
(+83 files in other folders)
