[workspace]
resolver = "2"
members = [
    "crates/common-types",
    "crates/catalog",
    "crates/worker",
    "crates/control-api",
    "crates/connector-sdk",
    "crates/loader-sdk",
    "crates/cli",
    "tests/integration",
]
exclude = ["examples/csv-source", "examples/upper-case-scalar"]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Errors
anyhow = "1"
thiserror = "1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros"] }

# Arrow / Parquet
arrow = "53"
parquet = "53"

# async-trait for async fns in object-safe traits
async-trait = "0.1"

# WASM
wasmtime = { version = "26", features = ["component-model", "async", "parallel-compilation"] }
wasmtime-wasi = "26"
wit-bindgen = "0.37"
dashmap = "6"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "gzip"], default-features = false }
blake3 = "1"
serde_yaml = "0.9"

# Internal crates
common-types = { path = "crates/common-types" }
catalog = { path = "crates/catalog" }
worker = { path = "crates/worker" }
connector-sdk = { path = "crates/connector-sdk" }
loader-sdk = { path = "crates/loader-sdk" }

[profile.dev]
opt-level = 1
