[workspace]
resolver = "2"
members = [
    "crates/common-types",
    "crates/catalog",
    "crates/worker",
    "crates/control-api",
    "crates/connector-sdk",
    "crates/loader-sdk",
    "crates/cli",
    "crates/auth",
    "crates/audit",
    "tests/integration",
]
exclude = ["examples/csv-source", "examples/upper-case-scalar", "examples/hello-world-source"]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Errors
anyhow = "1"
thiserror = "1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros"] }

# Arrow / Parquet
arrow = "53"
parquet = "53"

# async-trait for async fns in object-safe traits
async-trait = "0.1"

# WASM
wasmtime = { version = "26", features = ["component-model", "async", "parallel-compilation"] }
wasmtime-wasi = "26"
wit-bindgen = "0.37"
dashmap = "6"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "gzip"], default-features = false }
blake3 = "1"
serde_yaml = "0.9"

# CDC
tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4"] }
postgres-protocol = "0.6"
byteorder = "1"
futures-util = "0.3"
bytes = "1"

# Observability (Era I exit — RFC-15 operational plane)
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }
axum = "0.7"

# Secrets (Phase II.2.a — RFC-11)
zeroize = { version = "1", features = ["zeroize_derive"] }

# Auth (Phase II.2.b — RFC-12)
jsonwebtoken = "9"
argon2 = "0.5"
vaultrs = "0.7"

# Auth Phase II.2.c — RS256 + JWKS
rsa = "0.9"
pem = "3"
tower-http = { version = "0.6", features = ["trace"] }

# Audit Phase II.2.d — RFC-15
sha2 = "0.10"

# Internal crates
common-types = { path = "crates/common-types" }
catalog = { path = "crates/catalog" }
worker = { path = "crates/worker" }
connector-sdk = { path = "crates/connector-sdk" }
loader-sdk = { path = "crates/loader-sdk" }
auth = { path = "crates/auth" }
audit = { path = "crates/audit" }

[profile.dev]
opt-level = 1
