[package]
name = "auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "etl-auth"
path = "src/bin/etl_auth.rs"

[dependencies]
common-types = { workspace = true }
catalog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
pem = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
argon2 = { workspace = true }
rand = "0.8"
uuid = { workspace = true }
sqlx = { workspace = true }
base64 = "0.22"
dirs = "5"
audit = { workspace = true }
chacha20poly1305 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
