[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "platform"
path = "src/main.rs"

[dependencies]
common-types = { workspace = true }
catalog = { workspace = true }
worker = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
temporalio-client = "0.2"
temporalio-common = "0.2"
prost-wkt-types = "0.7"
tonic = "0.14"
chrono = { workspace = true }
auth = { workspace = true }
audit = { workspace = true }
dirs = "5"
base64 = "0.22"
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
