[package]
name = "loader-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
common-types = { workspace = true }
anyhow = { workspace = true }
