[workspace]

[package]
name = "postgres-cdc-rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow-array = { version = "53", default-features = false }
arrow-schema = { version = "53", default-features = false }
arrow-ipc = { version = "53", default-features = false }
arrow-data = { version = "53", default-features = false }
arrow-buffer = { version = "53", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
