[package]
name = "stripe-source"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.37"
arrow-array = { version = "53", default-features = false }
arrow-schema = { version = "53", default-features = false }
arrow-ipc = { version = "53", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "s"
lto = true
