[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
catalog = { workspace = true }
common-types = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tempfile = "3"
walkdir = "2"
parquet = { workspace = true }
arrow = { workspace = true }
