[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
catalog = { workspace = true }
common-types = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tempfile = "3"
walkdir = "2"
dirs = "5"
auth = { workspace = true }
audit = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
wiremock = "0.6"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
mysql_async = { workspace = true }
worker = { workspace = true }
loader-sdk = { workspace = true }
